# spatialisation_de_son

./: .gitignore  README.md
020-Presentations/: ~$25isc_il-p3_251_spatialisation-de-son_aubrysarah_presentation.pptx
030-Developpement/: 25isc_il-p3_251_spatialisation-de-son_aubrysarah_son_stereo_vs_surround_schema.vsdx  README.md
030-Developpement/0_sonos_apis/: adresses_ip.md  sonos_config.py  test-audio-spatial.py  test-simulation-atmos.py  test-sphere-deplacement.py  test-volumes.py
030-Developpement/0_sonos_apis/multi-speakers/: 1_test_audio_spatial_2_haut_parleursv2.py  2_test_son_simlutane.py  3_vpython_demo.py  stop.py
030-Developpement/0_sonos_apis/multi-speakers/interactive_app/: move_sphere_pygame_sonos.py  sonos_recover.py  sonos_utils.py
030-Developpement/0_sonos_apis/one-speaker/: 0-test-audio-one-speaker.py
030-Developpement/1_python_carte_son/: 0_playing_separate_files_to_4_different_channels.py  0_two_outputs_sound.py  1_stereo_sound_pygame.py  2_4_different_channels.py  librairies.txt  test.py
030-Developpement/3_cpp_carte_son/: 0_2_outputs_2r2l.cpp  0_2_outputs_ch01.cpp  0_4_outputs.cpp  CMakeLists.txt  README.md  commandes_cpp.md
030-Developpement/4_demo_interactive/demo_interface_audio/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
